tests/kiama/negative/type_errors/L4/4_badarray1.ob
MODULE badarray1;

TYPE
    atype1 = ARRAY -1 OF INTEGER;

END badarray1.
